Separate Code Into Files
Each file contains a data structure or algorithm.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <script src="index.js" defer></script>
+  <script src="mergeSort.js" defer></script>
+  <script src="linkedList.js" defer></script>
+  <script src="BST.js" defer></script>
   <style>
     body {
       background-color: black;
